--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
     
   </head>
   <body>
-    <section class="bxslider w_100">
+    <header class="section_middle_center header">
+      <div class="w_90 w_98_desktop">
+        <a href="" class="logo">
+          <img src="images/logodaradark.png" alt="logo">
+        </a>
+        <a href="" class="logo_activo">
+          <img src="images/logodaralight.png" alt="logoActivo">
+        </a>
+      </div>
+    </header>
+    <section id="top" class="bxslider w_100">
       <div class="section_middle_center sliderWrapp">
         <img src="images/webges.jpg" alt="webges">
         <div class="section_middle_center caption w_80 w_50_desktop">
@@ -96,7 +106,7 @@
     <section class="section_middle_center parallax-window talk" data-parallax="scroll" data-image-src="images/post2.jpg" data-speed="0.5">
       <div class="w_80 align_center">
         <h2 class="whiteColor font_light">¿QUIERES SABER COMO OPTIMIZAR TU <span>INVERSIÓN DIGITAL</span> CON DATOS REALES?</h2>
-        <a href="" class="button"> <i class="far fa-comments"></i>&nbsp;&nbsp;&nbsp;Hablemos</a>
+        <a href="#contact" class="button"> <i class="far fa-comments"></i>&nbsp;&nbsp;&nbsp;Hablemos</a>
       </div>
     </section>
 
@@ -265,8 +275,54 @@
     </section>
 
     <section id="contact" class="contact section_middle_center">
-
+      <h2 class="font_light">¿HABLAMOS? 683.46.30.83</h2>
+      <span class="diamont">
+        <i class="far fa-gem"></i>
+      </span>
+      <form action="" class="section_middle_center w_50_desktop w_80 contact">
+        <div class="w_100 section_middle_justify">
+          <label for="nombre" class="w_100 w_20_desktop marginBottom_small">Nombre <span>*</span></label>
+          <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
+            <i class="fas fa-user w_5 section_middle_center align_center"></i>
+            <input id="nombre" name="nombre" type="text" class="w_89">
+          </div>
+        </div>
+        <div class="w_100 section_middle_justify">
+          <label for="email" class="w_100 w_20_desktop marginBottom_small">Email <span>*</span></label>
+          <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
+            <i class="fas fa-envelope w_5 section_middle_center align_center"></i>
+            <input id="email" name="email" type="email" class="w_89">
+          </div>
+        </div>
+        <div class="w_100 section_middle_justify">
+          <label for="phone" class="w_100 w_20_desktop marginBottom_small">Teléfono <span>*</span></label>
+          <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
+            <i class="fas fa-phone w_5 section_middle_center align_center"></i>
+            <input id="phone" name="phone" type="tel" class="w_89">
+          </div>
+        </div>
+        <div class="w_100 section_middle_justify">
+          <label for="asunto" class="w_100 w_20_desktop marginBottom_small">Asunto <span>*</span></label>
+          <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
+            <i class="fas fa-list-ul w_5 section_middle_center align_center"></i>
+            <input id="asunto" name="asunto" type="text" class="w_89">
+          </div>
+        </div>
+        <div class="w_100 section_top_justify">
+          <label for="asunto" class="w_100 w_20_desktop marginBottom_small">Mensaje <span>*</span></label>
+          <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
+            <i class="fas fa-pencil-alt w_5 section_middle_center align_center textarea"></i>
+            <textarea id="asunto" name="asunto" type="text" class="w_89"></textarea>
+          </div>
+        </div>
+        <input type="submit" value="Enviar Mensaje" class="w_100 align_center button submit">
+      </form>
     </section>
-
+    <footer class="w_100 section_middle_center">
+      Copyrights © 2018. All rights reserved | hablamos@daracontribution.com | Tlf. 683.46.30.83
+    </footer>
+    <a href="#top" class="upArrow section_middle_center">
+      <i class="fas fa-angle-up"></i>
+    </a>
   </body>
 </html>
