--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="images/webges.jpg" alt="webges">
         <div class="section_middle_center caption w_80 w_50_desktop">
           <h2>DARA</h2>
-          <h3 class="font_light marginBottom_medium">AlGORITMO DE DESARROLLO PROPIO</h3>
+          <h3 class="font_light marginBottom_medium">AlGORITMO DE DESARROLLO&nbsp;PROPIO</h3>
           <p class="align_center">Más de 5000 variables para tomar la decición correcta</p>
         </div>
       </div>
@@ -42,7 +42,7 @@
         <img src="images/people-1-2.jpg" alt="webges">
         <div class="section_middle_center caption w_80 w_50_desktop">
           <h2>DARA</h2>
-          <h3 class="font_light marginBottom_medium">Máxima optimización</h3>
+          <h3 class="font_light marginBottom_medium">MÁXIMA OPTIMIZACIÓN</h3>
           <p class="align_center">De los precios fijados en cada evento del plan</p>
         </div>
       </div>
@@ -275,7 +275,7 @@
     </section>
 
     <section id="contact" class="contact section_middle_center">
-      <h2 class="font_light">¿HABLAMOS? 683.46.30.83</h2>
+      <h2 class="font_light">¿HABLAMOS?</h2>
       <span class="diamont">
         <i class="far fa-gem"></i>
       </span>
@@ -319,7 +319,9 @@
       </form>
     </section>
     <footer class="w_100 section_middle_center">
-      Copyrights © 2018. All rights reserved | hablamos@daracontribution.com | Tlf. 683.46.30.83
+      <div class="w_90 w_98_desktop align_center">
+        Copyrights © 2018. All rights reserved | hablamos@daracontribution.com | Tlf. 683.46.30.83
+      </div>
     </footer>
     <a href="#top" class="upArrow section_middle_center">
       <i class="fas fa-angle-up"></i>
