--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.min.css">
 
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.bxslider.min.js"></script>
+    <script src="js/bastemp.min.js"></script>
     <script src="js/jquery.bxslider.min.js"></script>
     <script src="plugins/parallax.js-1.5.0/parallax.min.js"></script>
     <script src="js/ready.js"></script>
