--- a/index.html
+++ b/index.html
@@ -285,35 +285,35 @@
           <label for="nombre" class="w_100 w_20_desktop marginBottom_small">Nombre <span>*</span></label>
           <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
             <i class="fas fa-user w_5 section_middle_center align_center"></i>
-            <input id="nombre" name="nombre" type="text" class="w_89">
+            <input id="nombre" name="nombre" type="text" class="w_89" required>
           </div>
         </div>
         <div class="w_100 section_middle_justify">
           <label for="email" class="w_100 w_20_desktop marginBottom_small">Email <span>*</span></label>
           <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
             <i class="fas fa-envelope w_5 section_middle_center align_center"></i>
-            <input id="email" name="email" type="email" class="w_89">
+            <input id="email" name="email" type="email" class="w_89" required>
           </div>
         </div>
         <div class="w_100 section_middle_justify">
           <label for="phone" class="w_100 w_20_desktop marginBottom_small">Teléfono <span>*</span></label>
           <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
             <i class="fas fa-phone w_5 section_middle_center align_center"></i>
-            <input id="phone" name="phone" type="tel" class="w_89">
+            <input id="phone" name="phone" type="tel" class="w_89" required>
           </div>
         </div>
         <div class="w_100 section_middle_justify">
           <label for="asunto" class="w_100 w_20_desktop marginBottom_small">Asunto <span>*</span></label>
           <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
             <i class="fas fa-list-ul w_5 section_middle_center align_center"></i>
-            <input id="asunto" name="asunto" type="text" class="w_89">
+            <input id="asunto" name="asunto" type="text" class="w_89" required >
           </div>
         </div>
         <div class="w_100 section_top_justify">
           <label for="asunto" class="w_100 w_20_desktop marginBottom_small">Mensaje <span>*</span></label>
           <div class="section_middle_left w_100 w_80_desktop marginBottom_small">
             <i class="fas fa-pencil-alt w_5 section_middle_center align_center textarea"></i>
-            <textarea id="asunto" name="asunto" type="text" class="w_89"></textarea>
+            <textarea id="asunto" name="asunto" type="text" class="w_89" required></textarea>
           </div>
         </div>
         <input type="submit" value="Enviar Mensaje" class="w_100 align_center button submit">
